--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "84cfb1be",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,15 @@
     "%matplotlib inline\n",
     "\n",
     "from PIL import Image\n",
-    "import os "
+    "import os \n",
+    "\n",
+    "TARGET_SIZE = (512, 512)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab6bf836",
+   "id": "49dfea51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "75c893e2",
+   "id": "1ef73d27",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c40ade2f",
+   "id": "9d53fd19",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e17624e3",
+   "id": "1574e9fc",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8d3eb139",
+   "id": "1e43110c",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74bca5a2",
+   "id": "03fe2323",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d9744c35",
+   "id": "99051925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "300adcd9",
+   "id": "7242776d",
    "metadata": {},
    "outputs": [
     {
@@ -246,24 +248,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7817abdb",
+   "execution_count": 54,
+   "id": "4f5b497d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def process_image(IMG_PATH, LABEL_PATH):\n",
+    "    for image_file in sorted(os.listdir(IMG_PATH)):\n",
+    "        image_path = os.path.join(IMG_PATH, image_file)\n",
+    "        label_path = os.path.join(LABEL_PATH, os.path.splitext(image_file)[0] + \".txt\")\n",
+    "        \n",
+    "        if os.path.exists(label_path):\n",
+    "            image = Image.open(image_path)\n",
+    "            image = image.convert('L')\n",
+    "            resized_image = image.resize(TARGET_SIZE)\n",
+    "            org_w, org_h = image.size\n",
+    "            \n",
+    "            with open(label_path, 'r') as label_file:\n",
+    "                lines = label_file.readlines()\n",
+    "                \n",
+    "            with open(label_path, 'w') as label_file:\n",
+    "                for line in lines:\n",
+    "                    label_data = list(map(float, line.strip().split()))\n",
+    "                    adjusted_data = [label_data[0]] + [val * TARGET_SIZE[i % 2] / org_w if i % 2 == 0 else val * TARGET_SIZE[i % 2] / org_h for i, val in enumerate(label_data[1:])]\n",
+    "                    label_file.write(\" \".join(map(str, adjusted_data)) + \"\\n\")\n",
+    "            resized_image.save(os.path.join(IMG_PATH, image_file), 'JPEG')\n",
+    "    print('image processing done...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "94df387f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image processing done...\n"
+     ]
+    }
+   ],
+   "source": [
+    "process_image(train_path, trlabel_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "fc148bd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(416, 416)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TARGET_SIZE"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f26be422",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d39acc5b",
+   "id": "6441ecec",
    "metadata": {},
    "outputs": [],
    "source": []
